[project]
name = "threadlens-ha-integration-tests"
version = "0.1.3"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests", "custom_components"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
